test/testdata/variables/redeclared_local_error.lox
{
    var a = 1;
    var a; // error: a has already been declared
    a = 2;
}
